--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,9 @@ body {
   font-weight: 600;
   font-style: italic;
   color: #171b0c;
+  background: url(../img/bg.jpg) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover;
 }
 
 body.noscrol {
