--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "nullstyle.scss";
+@import "_nav.scss";
 
 .none {
     display: none;
@@ -63,6 +64,20 @@ main {
         flex-direction: column;
     }
 }
+
+.items>li {
+    padding: 10px 20px;
+    background-color: rgb(198, 197, 219);
+    margin: 5px 10px;
+    border-radius: 10px;
+    border: 2px solid #0b1a5e;
+    display: flex;
+    justify-content: space-between;
+    @media (max-width: 420px) {
+        margin: 5px 0px;
+        padding: 10px 10px;
+    }
+}
 .items {
     &__item {
         padding: 10px 20px;
@@ -76,6 +91,8 @@ main {
         }
     }
 
+    
+
     &__text {
         text-align: center;
         font-size: 36px;
@@ -83,10 +100,10 @@ main {
         color: #187e0f;
     }
 
-    &__tasck {
+    &__task {
         margin-right: 20px;
         min-width: 156px;
-        overflow: hidden;
+        //overflow: hidden;
         overflow: auto;
     }
 
