--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
+.nav {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 10px;
+}
+
 .nav__list {
   padding: 10px;
   display: -webkit-box;
@@ -89,6 +105,12 @@ h1, h2, h3, h4, h5, h6 {
           justify-content: flex-end;
 }
 
+@media (max-width: 500px) {
+  .nav__list {
+    display: none;
+  }
+}
+
 .nav__item {
   margin-left: 30px;
 }
@@ -102,6 +124,117 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav__link:hover {
   color: #095204;
+}
+
+.burger {
+  width: 30px;
+  height: 25px;
+  position: relative;
+}
+
+@media (min-width: 500px) {
+  .burger {
+    display: none;
+  }
+}
+
+.burger__sp1, .burger__sp2, .burger__sp3 {
+  position: absolute;
+  background-color: #fff;
+  width: 30px;
+  height: 3px;
+  left: 0;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.burger__sp1 {
+  top: 0;
+}
+
+.burger__sp2 {
+  top: 45%;
+}
+
+.burger__sp3 {
+  bottom: 0;
+}
+
+.burger.open span.burger__sp2 {
+  opacity: 0;
+}
+
+.burger.open span.burger__sp1 {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+  top: 10px;
+}
+
+.burger.open span.burger__sp3 {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  top: 10px;
+}
+
+.popup {
+  position: absolute;
+  display: block;
+  top: 60px;
+  left: 0;
+  -webkit-transform: translate(-600px);
+      -ms-transform: translate(-600px);
+          transform: translate(-600px);
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  opacity: 0.9;
+  z-index: 5;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+}
+
+@media (min-width: 500px) {
+  .popup {
+    display: none;
+  }
+}
+
+.popup__list {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.popup__item {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.popup__link {
+  color: #092407;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.popup.open {
+  -webkit-transform: translate(0px);
+      -ms-transform: translate(0px);
+          transform: translate(0px);
+  left: 0;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
 }
 
 .none {
@@ -164,6 +297,11 @@ main {
   padding: 0px 10px;
 }
 
+.activ {
+  color: #f2f2f2;
+  text-decoration: underline;
+}
+
 .header__contener {
   padding: 20px 30px;
 }
@@ -186,30 +324,6 @@ main {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-
-.items > li {
-  padding: 10px 20px;
-  background-color: #c6c5db;
-  margin: 5px 10px;
-  -webkit-border-radius: 10px;
-          border-radius: 10px;
-  border: 2px solid #0b1a5e;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-@media (max-width: 420px) {
-  .items > li {
-    margin: 5px 0px;
-    padding: 10px 10px;
-  }
 }
 
 .items__item {
