--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,6 +44,11 @@ main {
     padding: 0px 10px;
 }
 
+.activ {
+    color: #f2f2f2;
+    text-decoration: underline;
+}
+
 .header {
     &__contener {
         padding: 20px 30px;
@@ -65,19 +70,8 @@ main {
     }
 }
 
-.items>li {
-    padding: 10px 20px;
-    background-color: rgb(198, 197, 219);
-    margin: 5px 10px;
-    border-radius: 10px;
-    border: 2px solid #0b1a5e;
-    display: flex;
-    justify-content: space-between;
-    @media (max-width: 420px) {
-        margin: 5px 0px;
-        padding: 10px 10px;
-    }
-}
+
+
 .items {
     &__item {
         padding: 10px 20px;
