--- a/css/style.css
+++ b/css/style.css
@@ -75,12 +75,15 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------*/
 .nav {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
       -ms-flex-pack: end;
           justify-content: flex-end;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 10px;
@@ -89,6 +92,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 500px) {
   .nav {
     -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
@@ -97,12 +101,15 @@ h1, h2, h3, h4, h5, h6 {
 .nav__list {
   padding: 10px;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
@@ -120,6 +127,7 @@ h1, h2, h3, h4, h5, h6 {
 .nav__link {
   color: #092407;
   -webkit-transition: all 0.3s ease 0;
+  -o-transition: all 0.3s ease 0;
   transition: all 0.3s ease 0;
 }
 
@@ -146,6 +154,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 3px;
   left: 0;
   -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 
@@ -167,12 +176,14 @@ h1, h2, h3, h4, h5, h6 {
 
 .burger.open span.burger__sp1 {
   -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
           transform: rotate(45deg);
   top: 10px;
 }
 
 .burger.open span.burger__sp3 {
   -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
           transform: rotate(-45deg);
   top: 10px;
 }
@@ -183,6 +194,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 60px;
   left: 0;
   -webkit-transform: translate(-600px);
+      -ms-transform: translate(-600px);
           transform: translate(-600px);
   width: 100%;
   height: 100%;
@@ -190,6 +202,7 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 0.9;
   z-index: 5;
   -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
   transition: all 0.4s ease 0s;
 }
 
@@ -202,10 +215,12 @@ h1, h2, h3, h4, h5, h6 {
 .popup__list {
   margin-top: 30px;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
 }
@@ -223,9 +238,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .popup.open {
   -webkit-transform: translate(0px);
+      -ms-transform: translate(0px);
           transform: translate(0px);
   left: 0;
   -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
   transition: all 0.4s ease 0s;
 }
 
@@ -252,13 +269,16 @@ h1, h2, h3, h4, h5, h6 {
 
 .wraper {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   overflow: hidden;
@@ -274,7 +294,52 @@ body {
   font-style: italic;
   color: #171b0c;
   background: url(../img/bg.jpg) no-repeat;
-  background-size: cover;
+  -webkit-background-size: cover;
+          background-size: cover;
+}
+
+body.about {
+  background: url(../img/office-gabc392811_640.jpg) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover;
+}
+
+.contakt {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 20px;
+  background-color: #c6c5db;
+  margin: 5px 10px;
+  -webkit-border-radius: 10px;
+          border-radius: 10px;
+  border: 2px solid #0b1a5e;
+}
+
+@media (max-width: 420px) {
+  .contakt {
+    margin: 5px 0px;
+    padding: 10px 10px;
+  }
+}
+
+.contakt__text {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700;
+  font-style: italic;
+  color: #24c215;
+  margin-bottom: 20px;
 }
 
 body.noscrol {
@@ -284,6 +349,7 @@ body.noscrol {
 main {
   height: 100vh;
   -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   overflow: auto;
@@ -314,10 +380,12 @@ main {
 
 .main__items {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
 }
@@ -326,7 +394,8 @@ main {
   padding: 10px 20px;
   background-color: #c6c5db;
   margin: 5px 10px;
-  border-radius: 10px;
+  -webkit-border-radius: 10px;
+          border-radius: 10px;
   border: 2px solid #0b1a5e;
 }
 
@@ -352,13 +421,16 @@ main {
 
 .items__info {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   min-width: 80px;
@@ -381,6 +453,7 @@ main {
   right: 5px;
   background-color: #09f009;
   -webkit-transform: rotate(25deg);
+      -ms-transform: rotate(25deg);
           transform: rotate(25deg);
   pointer-events: none;
 }
@@ -393,6 +466,7 @@ main {
   right: 13px;
   background-color: #09f009;
   -webkit-transform: rotate(-25deg);
+      -ms-transform: rotate(-25deg);
           transform: rotate(-25deg);
   pointer-events: none;
 }
@@ -409,6 +483,7 @@ main {
   right: 9px;
   background-color: #f1097d;
   -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
           transform: rotate(45deg);
   pointer-events: none;
 }
@@ -421,18 +496,21 @@ main {
   right: 9px;
   background-color: #f1097d;
   -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
           transform: rotate(-45deg);
   pointer-events: none;
 }
 
 .btn {
   border: 1px solid #0b1a5e;
-  border-radius: 2px;
+  -webkit-border-radius: 2px;
+          border-radius: 2px;
   padding: 3px;
   margin: 5px;
   min-width: 25px;
   min-height: 25px;
   -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 
@@ -444,9 +522,11 @@ main {
 
 .items__item_task {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
@@ -455,7 +535,8 @@ main {
   padding: 10px 20px;
   background-color: #9290bb;
   margin: 5px 10px;
-  border-radius: 10px;
+  -webkit-border-radius: 10px;
+          border-radius: 10px;
   border: 2px solid #0b1a5e;
 }
 
@@ -473,10 +554,12 @@ main {
 
 .form__group {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
 }
@@ -485,7 +568,8 @@ main {
   padding: 10px;
   background-color: #e2ece7;
   margin: 5px 0;
-  border-radius: 5px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
   border: 1px solid #0b1a5e;
 }
 
@@ -503,12 +587,14 @@ main {
   padding: 5px 30px;
   background-color: #2f73a0;
   margin: 5px 0;
-  border-radius: 10px;
+  -webkit-border-radius: 10px;
+          border-radius: 10px;
   border: 1px solid #0b1a5e;
   color: #24c215;
   font-size: 24px;
   font-style: italic;
   -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 
